applied a margin to compensate for styling issues on mobile device

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -187,6 +187,17 @@ section {
   color: whitesmoke;
 }
 
+.section_alignment{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 8px;
+  margin-top: -30px;
+}
+
 #first_pg {
   gap: 16px;
   justify-content: center;
